[gd_scene load_steps=6 format=2]

[ext_resource path="res://isometric_boxes/box3d-cirno.tscn" type="PackedScene" id=1]
[ext_resource path="res://isometric_boxes/Menu3D.gd" type="Script" id=2]
[ext_resource path="res://isometric_boxes/InteractPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://menu/Menu.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="ViewportContainer" type="ViewportContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
stretch_shrink = 3

[node name="3D Viewport" type="Viewport" parent="."]
size = Vector2( 341, 256 )
size_override_stretch = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Spatial" parent="3D Viewport" instance=ExtResource( 1 )]

[node name="UI" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MenuPopup" type="PopupPanel" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Menu" parent="UI/MenuPopup" instance=ExtResource( 4 )]

[node name="InteractPopup" parent="UI" instance=ExtResource( 3 )]

[connection signal="hideInteract" from="3D Viewport/Spatial" to="UI" method="_on_Spatial_hideInteract"]
[connection signal="showInteract" from="3D Viewport/Spatial" to="UI" method="_on_Spatial_showInteract"]
